[gd_scene format=3 uid="uid://dix6oegi08owv"]

[ext_resource type="Script" uid="uid://bdo8a60um544b" path="res://minigames/KillTheBox/KillTheBox.gd" id="1_2yrci"]
[ext_resource type="Script" uid="uid://8rgcfw4qa8wq" path="res://minigames/KillTheBox/KTB_ArenaVisual.gd" id="2_1eabb"]
[ext_resource type="PackedScene" uid="uid://ceylgrogduevf" path="res://minigames/KillTheBox/Obstacle.tscn" id="3_u2sbf"]
[ext_resource type="Script" uid="uid://c8hvbjrtfmomh" path="res://minigames/KillTheBox/Boss.gd" id="4_emnjc"]
[ext_resource type="Script" uid="uid://i0xi42r8hcat" path="res://minigames/KillTheBox/Player.gd" id="5_i0spe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qclav"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hgsof"]

[sub_resource type="LabelSettings" id="LabelSettings_qclav"]
font_size = 70

[node name="KillTheBox" type="Node2D" unique_id=1297003087]
script = ExtResource("1_2yrci")

[node name="ArenaVisual" type="Node2D" parent="." unique_id=1506971995]
script = ExtResource("2_1eabb")

[node name="ObstacleContainer" type="Node2D" parent="." unique_id=1137643764]

[node name="StaticBody2D" parent="ObstacleContainer" unique_id=323543809 instance=ExtResource("3_u2sbf")]
position = Vector2(201, 384)

[node name="StaticBody2D2" parent="ObstacleContainer" unique_id=777473860 instance=ExtResource("3_u2sbf")]
position = Vector2(939, 396)

[node name="ProjectileContainer" type="Node2D" parent="." unique_id=699762822]

[node name="PowerupContainer" type="Node2D" parent="." unique_id=1154730225]

[node name="Boss" type="StaticBody2D" parent="." unique_id=1133594294]
position = Vector2(563, 115)
script = ExtResource("4_emnjc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss" unique_id=1138934080]
shape = SubResource("RectangleShape2D_qclav")

[node name="Player" type="CharacterBody2D" parent="." unique_id=395809474]
position = Vector2(572, 503)
script = ExtResource("5_i0spe")

[node name="CircleShape2D" type="CollisionShape2D" parent="Player" unique_id=1528278795]
shape = SubResource("CircleShape2D_hgsof")

[node name="GameTimer" type="Timer" parent="." unique_id=2137517771]
wait_time = 10.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1702307581]

[node name="TopBar" type="Panel" parent="CanvasLayer" unique_id=1130478277]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="CanvasLayer/TopBar" unique_id=1233687497]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Timer"
horizontal_alignment = 1

[node name="BossHPBar" type="ProgressBar" parent="CanvasLayer/TopBar" unique_id=569006027]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="HUD" type="Control" parent="CanvasLayer" unique_id=1831593371]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="CanvasLayer/HUD" unique_id=192464317]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -48.0
offset_right = 158.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "Victoria"
label_settings = SubResource("LabelSettings_qclav")
uppercase = true

[node name="PlayerHPBar" type="ProgressBar" parent="CanvasLayer/HUD" unique_id=646475194]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -27.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 0
